# agentic-platforms-systematic-evaluation

./: .dockerignore  .dockerignore.example  .env.example  .gitignore  README.md  pyproject.toml
config/: environment.yaml  platforms.yaml  prompts.yaml
data/baseline/: pyproject.toml
data/baseline/app/: __init__.py  config.py  database.py  main.py
data/baseline/app/models/: user.py
data/baseline/app/repositories/: __init__.py  user_repository.py
data/baseline/app/routers/: health.py
data/baseline/docs/design/: api_spec.md  architecture.md  components.md  database_schema.md
data/baseline/docs/design/diagrams/: class_diagram.puml  component_diagram.puml  er_diagram.puml  sequence_create_issue.puml
data/baseline/tests/: conftest.py  test_health.py
data/baseline/utils/: __init__.py  validation.py
data/gherkin/advanced/: US020_implement_auth.feature
data/gherkin/basic/: US000_adapter_smoke_test.feature  US001_add_utility_function.feature
data/prompts/advanced/: US020_implement_auth.md
data/prompts/basic/: US000_adapter_smoke_test.md  US001_add_utility_function.md
data/stories/advanced/: US020_implement_auth.yaml
data/stories/basic/: US000_adapter_smoke_test.yaml  US001_add_utility_function.yaml
docs/plans/: 2026-03-03-pipeline-restructure-design.md  2026-03-03-pipeline-restructure.md  2026-03-03-streamlit-dashboard-design.md  2026-03-03-streamlit-dashboard-plan.md
docs/presentations/: presentation.tex
docs/report/: DESMET_Agentic_Platforms.typ  UCD_CS_FYP_Report_DESMET_Agentic_Platforms.typ  references.bib  template.typ
docs/report-latex/: UCD_CS_FYP_Report.cls  UCD_CS_FYP_Report_DESMET_Agentic_Platforms.tex  references.bib
docs/report/chapters/: appendix-adding-adapter.typ  appendix-deploy-setup.typ  appendix-getting-started.typ  appendix-scoring-rubric.typ  approach-and-design.typ  conclusions.typ  data-considerations.typ  evaluation-method.typ  evaluation.typ  implementation.typ  introduction.typ  limitations.typ  related-work.typ
docs/spec/: PIPELINE_SPECIFICATION.md  Project_Description.txt  Stages.txt  containerized-evaluation-design.md  pipeline-uml.typ  projectideas.txt
docs/superpowers/plans/: 2026-03-10-adapter-refactor.md  2026-03-10-cli-runflow.md  2026-03-10-evaluation-criteria-report.md  2026-03-24-framework-metrics.md  2026-03-24-idiomatic-adapters.md  2026-03-24-langsmith-langgraph.md  2026-03-24-modular-webui-data-loading.md  2026-03-24-observability-multiview.md  2026-03-24-scoring-views-improvement.md  2026-03-28-agent-framework-adapter.md  2026-03-28-agent-graph-message-flow.md  2026-03-28-agent-graph-observation-clusters.md  2026-03-28-agent-graph-visualization.md  2026-03-28-docker-webui-improvements.md  2026-03-28-google-adk-adapter.md  2026-03-28-observation-collector.md  2026-03-28-result-storage.md  2026-03-28-retry-policy-progress.md  2026-04-06-n8n-adapter.md  2026-04-07-agent-graph-layout.md  2026-04-07-deploy-mode.md  2026-04-07-dynamic-model-selection.md  2026-04-07-flowise-adapter.md  2026-04-10-report-finalization.md
docs/superpowers/specs/: 2026-03-10-adapter-refactor-design.md  2026-03-10-cli-runflow-design.md  2026-03-10-evaluation-criteria-design.md  2026-03-24-framework-metrics-design.md  2026-03-24-idiomatic-adapters-design.md  2026-03-24-langsmith-langgraph-design.md  2026-03-24-modular-webui-data-loading-design.md  2026-03-28-agent-framework-adapter-design.md  2026-03-28-agent-graph-message-flow-design.md  2026-03-28-agent-graph-observation-clusters-design.md  2026-03-28-agent-graph-visualization-design.md  2026-03-28-docker-webui-improvements-design.md  2026-03-28-google-adk-adapter-design.md  2026-03-28-observation-collector-design.md  2026-03-28-result-storage-design.md  2026-03-28-retry-policy-progress-design.md  2026-04-06-n8n-adapter-design.md  2026-04-07-agent-graph-layout-design.md  2026-04-07-deploy-dockerfile-port-mapping-design.md  2026-04-07-deploy-mode-design.md  2026-04-07-dynamic-model-selection-design.md  2026-04-07-flowise-adapter-design.md  2026-04-07-langflow-adapter-design.md  2026-04-10-report-finalization-design.md
infrastructure/: Dockerfile.agent-framework  Dockerfile.base  Dockerfile.crewai  Dockerfile.framework.example  Dockerfile.google-adk  Dockerfile.langgraph  Dockerfile.openai-agents  Dockerfile.platform  Dockerfile.python  docker-compose.yaml
src/desmet/: __init__.py  cli.py  cost_calculator.py  infra.py  llm_config.py  observability.py  platforms_config.py
src/desmet/adapters/: __init__.py  _base.py  _observation.py  _planning.py  _prompts.py  _retry.py  _stub.py  _tools.py  _tracing.py  _validation.py  _visual_base.py  agent_framework.py  autogen.py  crewai.py  dify.py  flowise.py  flowise_templates.py  google_adk.py  langflow.py  langflow_templates.py  langgraph.py  n8n.py  n8n_templates.py  openai_agents.py  registry.py  semantic_kernel.py
src/desmet/analysis/: __init__.py
src/desmet/dashboard/: __init__.py  app.py  charts.py  data.py  export.py
src/desmet/dimensions/: __init__.py
tests/: test_adapter_interface.py  test_adapter_planning.py  test_adapter_prompts.py  test_adapter_tools.py  test_adapter_tracing.py  test_agent_framework_adapter.py  test_auto_rubric.py  test_baseline_workspace.py  test_cli_commands.py  test_container_runner.py  test_context_serialization.py  test_crewai_adapter.py  test_dashboard_data.py  test_deploy_remote.py  test_dev_metrics.py  test_dify_adapter.py  test_entrypoint.py  test_environment_context.py  test_execute_story_compat.py  test_extended_metrics_integration.py  test_flowise_adapter.py  test_framework_metrics.py  test_google_adk_adapter.py  test_google_adk_instruction_escape.py  test_graph.py  test_harness_base.py  test_infra.py  test_langflow_adapter.py  test_langgraph_adapter.py  test_langsmith_client.py  test_llm_config.py  test_metrics.py  test_model_discovery.py  test_n8n_adapter.py  test_observation_collector.py  test_openai_agents_adapter.py  test_progress_reporter.py  test_resource_monitor.py  test_result_serialization.py  test_retry_policy.py  (+7 more)
tests/adapters/: conftest.py  test_registry.py
(+130 files in other folders)
