[project]
name = "desmet-agentic-evaluation"
version = "1.0.0"
description = "DESMET-based evaluation framework for agentic platforms"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Ciaran McDonnell", email = "ciaran.mcdonnell@ucdconnect.ie" }
]
keywords = ["agents", "llm", "evaluation", "desmet", "agentic"]

dependencies = [
    # Core evaluation framework
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    # Data handling
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "duckdb>=1.0.0",
    # Logging and tracing
    "structlog>=23.0.0",
    "langfuse>=4.0.0",
    # Web UI (Management Console)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "websockets>=12.0",
    # LangGraph / LangChain v1
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-sdk>=0.1.0",
    "langgraph-checkpoint>=4.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    # CrewAI
    "crewai[tools]>=1.12.2",
    # CrewAI OTEL tracing (crew/task/agent/tool spans)
    "openinference-instrumentation-crewai>=1.0.0",
    # OpenAI Agents SDK
    "openai-agents>=0.1.0",
    # Microsoft Agent Framework
    "agent-framework-core>=1.0rc5",
    "agent-framework-orchestrations>=1.0b0",
]

[project.optional-dependencies]
# Static chart export (PNG/SVG for reports)
export = [
    "kaleido>=1.0.0",
]
google-adk = [
    "google-adk[extensions]>=1.0.0",
]

# ── Visual/workflow platforms ──
# Flowise, Dify, n8n, LangFlow — Docker-only, evaluated via HTTP APIs.
# No Python deps needed.


[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "pre-commit>=4.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
desmet = "desmet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desmet"]

# ── uv ──────────────────────────────────────────────────────────────────────

[tool.uv]
# Ensure uv resolves wheels that work on Windows (lancedb has no win_amd64 wheels).
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

# Many platform SDKs pin conflicting transitive dependency versions (especially
# pydantic, openai, litellm). Each platform extra is intended to be installed in
# isolation — pick ONE per virtual-env. Declare all known conflicts so uv can
# resolve the base dependencies without trying to unify incompatible extras.
conflicts = [
    [
        { extra = "agent-framework" },
        { extra = "google-adk" },
    ],
]

# agent-framework-core requires opentelemetry-api>=1.39 but crewai pins <1.35.
# Since agent-framework and crewai are declared conflicting (never co-installed),
# loosen the OTEL lower bounds so uv can resolve both extras independently.
override-dependencies = [
    "opentelemetry-api>=1.34.0",
    "opentelemetry-sdk>=1.34.0",
]


# ── Tool config ─────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/desmet --cov-report=html -W ignore::pytest.PytestCollectionWarning"

[tool.coverage.run]
source = ["src/desmet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
