[project]
name = "desmet-agentic-evaluation"
version = "1.0.0"
description = "DESMET-based evaluation framework for agentic platforms"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Ciaran McDonnell", email = "ciaran.mcdonnell@ucdconnect.ie" }
]
keywords = ["agents", "llm", "evaluation", "desmet", "agentic"]

dependencies = [
    # Core evaluation framework
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    # Data handling
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "duckdb>=1.0.0",
    # Logging and tracing
    "structlog>=23.0.0",
    "langfuse>=4.0.0",
    # Web UI (Management Console)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
# ── Platform adapters (installed per-container to avoid dependency conflicts) ──
langgraph = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-sdk>=0.1.0",
    "langgraph-checkpoint>=4.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
]
crewai = [
    "crewai[tools]>=1.12.2",
]
openai-agents = [
    "openai-agents>=0.1.0",
]
agent-framework = [
    "agent-framework-core>=1.0rc5",
    "agent-framework-orchestrations>=1.0b0",
    "agent-framework-openai>=1.0rc5",
]
google-adk = [
    "google-adk[extensions]>=1.0.0",
]
# Static chart export (PNG/SVG for reports)
export = [
    "kaleido>=1.0.0",
]

# ── Visual/workflow platforms ──
# Flowise, Dify, n8n, LangFlow — Docker-only, evaluated via HTTP APIs.
# No Python deps needed.


[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "pre-commit>=4.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
desmet = "desmet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desmet"]

# ── uv ──────────────────────────────────────────────────────────────────────

[tool.uv]
# Ensure uv resolves wheels that work on Windows (lancedb has no win_amd64 wheels).
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

# Platform SDK extras have incompatible opentelemetry version pins:
#   crewai <1.35 | google-adk >=1.36,<1.39 | agent-framework >=1.39
# Each extra is installed in its own Docker container, never co-installed.
# The conflicts declaration lets uv resolve each extra independently.
conflicts = [
    [
        { extra = "crewai" },
        { extra = "agent-framework" },
    ],
    [
        { extra = "crewai" },
        { extra = "google-adk" },
    ],
    [
        { extra = "agent-framework" },
        { extra = "google-adk" },
    ],
]


# ── Tool config ─────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/desmet --cov-report=html -W ignore::pytest.PytestCollectionWarning"

[tool.coverage.run]
source = ["src/desmet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
