[project]
name = "sample-app"
version = "0.1.0"
description = "Baseline sample application for DESMET evaluation stories"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# This baseline is an evaluation fixture, not a publishable package.
# Telling uv it's not a package skips the hatchling wheel build during
# `uv sync` — without this, `uv run pytest` fails on a fresh workspace
# with "Unable to determine which files to ship inside the wheel"
# because the project name (sample-app) doesn't match any directory.
[tool.uv]
package = false
